# GestionCentraliseeLogs

./: .gitignore  CMakeLists.txt  Doxyfile  main.cpp  main.h  readme.md
Logs/: log.cpp  log.h
Menu/: main.cpp  menu.cpp  menu.h
